fixed IE bug: selection marker only BR is visible

--- a/packages/silex-lib/src/css/stage.less
+++ b/packages/silex-lib/src/css/stage.less
@@ -21,7 +21,7 @@
   opacity: 1 !important;
 }
 .editable-style.silex-selected {
-  box-shadow: 0 0 2px rgba(51, 51, 51, 1);
+  box-shadow: 0 0 4px rgba(51, 51, 51, 1);
 
   & > .ui-resizable-ne {
     top: -7px;
